# ReapNES

./: .gitignore  ANTIGRAVITYADVENTURES.md  CLAUDE.md  CLAUDEREPORTSONANTIGRAVITY.md  CV2BREAKTHROUGH.md  DOCUMENTAIRTRAFFICCONTROL.md  FLEXIBILITYGOALS.md  HOWCV2ISGOING.md  NEXT_SESSION_PROMPT.md  README.md  STATUS.md  WINSWISHES.md  WISHESADVENTURE.md  _config.yml  about.md  batch_nsf_log.txt  downloads.md  index.md  megaman_extract.py  pyproject.toml  reapack-index.xml  requirements.txt  ruff.toml
.claude/: settings.local.json
code/: contra_parser.md  frame_ir.md  index.md  midi_export.md  parser.md  trace_compare.md
data/: trace_diff_contra.json  trace_diff_cv1.json
docs/: APIerror.md  AUDIT_REPORT.md  AVOIDBLUNDERS.md  BGMPATTERNFINDING.md  BIONIC_COMMANDO_STATUS.md  BLOOPERS.md  CAPCOMNSFINDINGS.md  CAPCOM_ENGINE_STATUS.md  CAPCOM_HONEST_STATUS.md  CHECKLIST.md  COMMAND_MANIFEST.md  COMMAND_VARIABILITY.md  COMMUNITYSEARCHREPORT.md  CONTEXTENGTAKEAWAYS.md  CONTRACOMPARISON.md  CONTRACONTEXTENGINEERING.md  CONTRAGOALLINE.md  CONTRALESSONS.md  CONTRALESSONSTOCV1.md  CONTRAVERSIONS.md  CV2_TRACE_ANALYSIS.md  DECKARDCONTRASTAGE2.md  DECKARDTOOLREPORT.md  DECKARD_SUPERC_BOUNDARIES.md  DONEBEFORE.md  DRIVER_FAMILIES.md  DRIVER_IDENTIFICATION.md  DRIVER_MODEL.md  DRIVER_TAXONOMY.md  ENVELOPE_SYSTEMS.md  FAILURE_MODES.md  FIRSTEXPERIMENT.md  FIRSTIMPRESSIONSBIONIC.md  FIRSTSTEPSVAMPKILL.md  FIRST_TARGET_FAMILY.md  FLEXIBLE_PARSER_ARCHITECTURE.md  FidelityAudit_CV1.md  GAME_MATRIX.md  GRINDINGONTHEPOINTERTABLE.md  HANDOVER.md  (+68 more)
examples/: midi_mapping_example.json
(+3133 files in other folders)
